<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<artifactId>cms-indexing-xml</artifactId>
	<version>0.22.2-SNAPSHOT</version>
	<packaging>jar</packaging>
	
	<name>${project.artifactId}-${project.version}</name>
	<url>http://www.simonsoft.se/</url>
	
	<parent>
		<groupId>se.simonsoft</groupId>
		<artifactId>cms-maven-parent</artifactId>
		<version>11.0.2</version>
		<relativePath/>
	</parent>

	<repositories>
		<repository>
    		<id>repos.open.repo</id>
        	<name>Simonsoft / Repos Open Repository</name>
        	<url>http://opensource.simonsoft.se/maven/</url>
    	</repository>
    </repositories>
	
	<properties>
		<solr-version>9.6.1</solr-version>
		
		<quarkus-plugin.version>3.39.2</quarkus-plugin.version>
		<quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
		<quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
		<quarkus.platform.version>3.39.2</quarkus.platform.version>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		
		<mockito-version>5.21.0</mockito-version>
		<surefire-plugin.version>3.2.5</surefire-plugin.version>
	</properties>
	
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>${quarkus.platform.group-id}</groupId>
				<artifactId>${quarkus.platform.artifact-id}</artifactId>
				<version>${quarkus.platform.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	
	<dependencies>
        <dependency>
            <groupId>jakarta.enterprise</groupId>
            <artifactId>jakarta.enterprise.cdi-api</artifactId>
        </dependency>
		<dependency>
			<groupId>org.eclipse.microprofile.config</groupId>
			<artifactId>microprofile-config-api</artifactId>
		</dependency>
	
		<dependency>
			<groupId>se.simonsoft</groupId>
			<artifactId>cms-item</artifactId>
			<version>3.2.3-SNAPSHOT</version>
		</dependency>
	
		<dependency>
			<groupId>se.simonsoft</groupId>
			<artifactId>quarkus-svn-extension</artifactId>
			<version>1.0.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>se.simonsoft</groupId>
			<artifactId>quarkus-solr-extension</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>se.repos</groupId>
			<artifactId>repos-indexing</artifactId>
			<version>0.22.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>se.simonsoft</groupId>
			<artifactId>cms-xmlsource</artifactId>
			<version>0.22.1</version>
			<exclusions>
				<exclusion>
					<artifactId>jdom2</artifactId>
					<groupId>org.jdom</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		
		<!-- Needed for workflow indexing. -->
		<dependency>
			<groupId>se.simonsoft</groupId>
			<artifactId>cms-publish-config</artifactId>
			<version>1.4.0</version>
		</dependency>
		
	  	<dependency>
	  		<groupId>org.apache.solr</groupId>
	  		<artifactId>solr-solrj</artifactId>
	  		<version>${solr-version}</version>
	  	</dependency>
		<!-- logging backend for unit tests: log debug and above to console, no need for config file -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback-version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>se.simonsoft</groupId>
			<artifactId>cms-backend-svnkit</artifactId>
			<version>4.0.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito-version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <configuration>
					<argLine>
						-Djava.util.logging.manager=org.jboss.logmanager.LogManager
						--add-opens java.base/java.lang=ALL-UNNAMED
						--add-opens java.base/java.lang.invoke=ALL-UNNAMED
						-XX:+EnableDynamicAgentLoading
					</argLine>
                </configuration>
            </plugin>
            <plugin>
		      <groupId>org.jboss.jandex</groupId>
		      <artifactId>jandex-maven-plugin</artifactId>
		      <version>1.2.1</version>
		      <executions>
		        <execution>
		          <id>make-index</id>
		          <goals>
		            <goal>jandex</goal>
		          </goals>
		        </execution>
		      </executions>
		    </plugin>
			<plugin>
				<groupId>com.mycila.maven-license-plugin</groupId>
				<artifactId>maven-license-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>**/*.txt</exclude>
						<exclude>LICENSE</exclude>
						<exclude>src/test/resources/**</exclude>
						<exclude>src/main/resources/se/simonsoft/cms/indexing/xml/solr/reposxml/conf/velocity/*</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
</project>
